<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imagePerfil"
        android:layout_width="@dimen/img_medium"
        android:layout_height="@dimen/img_medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/nombrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/imagePerfil"
        android:paddingTop="10dip"
        android:textColor="@color/azul"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imagePerfil"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="14dp"
        android:text="@string/hacerpuntos"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nombrePerfil"
        android:layout_below="@+id/nombrePerfil"
        android:layout_marginTop="15dp"
        android:text="@string/puntos"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/puntosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:textColor="@color/verde"
        android:textSize="@dimen/text_large" />

</RelativeLayout>